--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <canvas id="myCanvas" width="800" height="400"></canvas>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
