--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Bubbles App</title>
   </head>
   <body>
     <canvas id="myCanvas" width="800" height="400"></canvas>
+    <br />
+    <div class="resetContainer">
+      <button id="resetButton">Reset</button>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
