add app title and update css

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Bubbles App</title>
   </head>
   <body>
+    <h2 class="title">Bubbles App</h2>
     <canvas id="myCanvas" width="800" height="400"></canvas>
-    <br />
     <div class="resetContainer">
       <button id="resetButton">Reset</button>
     </div>
